--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,19 @@
 /*  your css code here. If applicable */
+#yellow{
+	border-width:1px;
+	border-color:green;
+	border-style: solid;
+	background:yellow;
+}
+#red{
+	border-width:1px;
+	border-color:black;
+	border-style: solid;
+	background:red;
+}
+#green{
+	border-width:1px;
+	border-color:yellow;
+	border-style: solid;
+	background:green;
+}
